# gl-mandelbrot

./: CMakeLists.txt  imgui.ini
shd/: compute.comp  default.frag  mandelbrot.comp  present.vert
src/: game.cpp  game.h  input.cpp  input.h  main.cpp  render.cpp  render.h  state.cpp  state.h  window.cpp  window.h
